--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     ports:
       - '5432:5432'
     environment:
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
       POSTGRES_DB: todo
     volumes:
       - ./scripts:/docker-entrypoint-initdb.d
@@ -12,9 +12,10 @@ services:
   backend:
     build: ./backend
     ports:
-      - '3000:3000'
+      - '${HTTP_PORT:-3000}:${HTTP_PORT:-3000}'
     environment:
-      DATABASE_URL: 'postgres://postgres:postgres@database/postgres?sslmode=disable'
+      DATABASE_URL: 'postgres://postgres:${POSTGRES_PASSWORD:-postgres}@database/postgres?sslmode=disable'
+      HTTP_PORT: ${HTTP_PORT:-3000}
     depends_on:
       - database
     volumes:
