--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,10 +2,12 @@ FROM golang:alpine
 
 WORKDIR /app
 
+RUN apk add make
+
 RUN go install github.com/cosmtrek/air@latest
 
 COPY . .
 
 RUN go get ./...
 
-CMD ["air"]
+CMD ["make", "dev"]
