--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - '${HTTP_PORT:-3000}:${HTTP_PORT:-3000}'
     environment:
       DATABASE_URL: 'postgres://postgres:${POSTGRES_PASSWORD:-postgres}@database/postgres?sslmode=disable'
+      TEST_DATABASE_URL: 'postgres://postgres:${POSTGRES_PASSWORD:-postgres}@database/test?sslmode=disable'
       HTTP_PORT: ${HTTP_PORT:-3000}
     depends_on:
       - database
