--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     ports:
       - '5173:5173'
     environment:
-      VITE_API_URL: 'http://backend:3000'
+      VITE_API_URL: 'http://localhost:3000'
     volumes:
       - ./frontend/src:/app/src
     depends_on:
